# tmail

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
src/: main.rs  tests.rs  utilities.rs
