[package]
name = "tmail"
version = "0.1.2"
edition = "2021"
authors = ["Atif Yushri <atif@yushri.com>"]
description = "A temporary email address"
repository = "https://github.com/atifyushri/tmail"
license = "MIT"
keywords = ["email", "temporary", "tmail", "tempmail"]


[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
inquire = "0.7.5"
open = "5.3.0"
rand = "0.8.5"
redb = "2.1.3"
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }
